updated memory route
